--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -6,22 +6,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:ignore="ExtraText">
+    tools:context=".AddExpenseActivity">
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="match_parent"
-        android:layout_height="134dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Add Expense"
-        android:textSize="46sp" />
+        android:textSize="36sp" />
 
     <EditText
         android:id="@+id/editTextNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:gravity="center_vertical"
         android:hint="Enter your amount"
         android:inputType="number"
         android:minHeight="48dp" />
@@ -30,39 +28,32 @@
         android:id="@+id/editTextDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:hint="Enter The Date"
-        android:minHeight="48dp"
-        android:inputType="date" />
+        android:inputType="date"
+        android:minHeight="48dp" />
 
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Category"
         android:minHeight="48dp" />
 
     <EditText
         android:id="@+id/editTextText3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:hint="Enter Description"
         android:inputType="text"
-        android:minHeight="48dp"
-        android:text="Description" />
+        android:minHeight="48dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_upload_receipt"
         android:layout_width="match_parent"
-        android:layout_height="94dp"
+        android:layout_height="wrap_content"
         android:backgroundTint="#4CAF50"
         android:text="Upload Receipt"
         android:textColor="@android:color/white"
-        android:textSize="34sp" />
-
-    <!-- optional placeholder -->
-
+        android:textSize="24sp" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -71,13 +62,20 @@
         app:srcCompat="@drawable/img" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_save"
         android:layout_width="match_parent"
-        android:layout_height="94dp"
+        android:layout_height="wrap_content"
         android:backgroundTint="#4CAF50"
         android:text="Save"
         android:textColor="@android:color/white"
-        android:textSize="34sp"
-        tools:ignore="DuplicateIds" />
+        android:textSize="24sp" />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        app:itemIconTint="@android:color/black"
+        app:itemTextColor="@android:color/black"
+        app:menu="@menu/bottom_nav_menu" />
 </LinearLayout>
