--- a/app/src/main/res/layout/activity_expense_history.xml
+++ b/app/src/main/res/layout/activity_expense_history.xml
@@ -1,38 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/expense_history"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="134dp"
-        android:gravity="center"
-        android:text="Expense History"
-        android:textSize="46sp" />
+<TextView
+android:id="@+id/textView5"
+android:layout_width="match_parent"
+android:layout_height="134dp"
+android:gravity="center"
+android:text="Expense History"
+android:textSize="46sp" />
 
-    <Button
-        android:id="@+id/buttonStartDate"
-        android:layout_width="match_parent"
-        android:layout_height="94dp"
-        android:backgroundTint="#4CAF50"
-        android:text="Select Start Date"
-        android:textColor="@android:color/white"
-        android:textSize="34sp" />
+<Button
+android:id="@+id/buttonStartDate"
+android:layout_width="match_parent"
+android:layout_height="94dp"
+android:backgroundTint="#4CAF50"
+android:text="Select Start Date"
+android:textColor="@android:color/white"
+android:textSize="34sp" />
 
-    <Button
-        android:id="@+id/buttonEndDate"
-        android:layout_width="match_parent"
-        android:layout_height="94dp"
-        android:backgroundTint="#4CAF50"
-        android:text="Select End Date"
-        android:textColor="@android:color/white"
-        android:textSize="34sp" />
+<Button
+android:id="@+id/buttonEndDate"
+android:layout_width="match_parent"
+android:layout_height="94dp"
+android:backgroundTint="#4CAF50"
+android:text="Select End Date"
+android:textColor="@android:color/white"
+android:textSize="34sp" />
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="415dp" />
+<ListView
+android:layout_width="match_parent"
+android:layout_height="415dp" />
 
-</LinearLayout>
+    <!-- Bottom Navigation View -->
+<com.google.android.material.bottomnavigation.BottomNavigationView
+android:id="@+id/bottomNavigationView"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:background="@android:color/white"
+app:itemIconTint="@android:color/black"
+app:itemTextColor="@android:color/black"
+app:menu="@menu/bottom_nav_menu" />
+    </LinearLayout>
