--- a/app/src/main/res/layout/activity_expense_history.xml
+++ b/app/src/main/res/layout/activity_expense_history.xml
@@ -1,48 +1,79 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/expense_history"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    tools:context=".ExpenseHistoryActivity">
 
-<TextView
-android:id="@+id/textView5"
-android:layout_width="match_parent"
-android:layout_height="134dp"
-android:gravity="center"
-android:text="Expense History"
-android:textSize="46sp" />
+    <!-- Expense History Title -->
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:text="Expense History"
+        android:textColor="#003366"
+        android:textSize="42sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-<Button
-android:id="@+id/buttonStartDate"
-android:layout_width="match_parent"
-android:layout_height="94dp"
-android:backgroundTint="#4CAF50"
-android:text="Select Start Date"
-android:textColor="@android:color/white"
-android:textSize="34sp" />
+    <!-- Select Start Date Button -->
+    <Button
+        android:id="@+id/buttonStartDate"
+        android:layout_width="0dp"
+        android:layout_height="94dp"
+        android:backgroundTint="#4CAF50"
+        android:text="Select Start Date"
+        android:textColor="@android:color/white"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginTop="16dp" />
 
-<Button
-android:id="@+id/buttonEndDate"
-android:layout_width="match_parent"
-android:layout_height="94dp"
-android:backgroundTint="#4CAF50"
-android:text="Select End Date"
-android:textColor="@android:color/white"
-android:textSize="34sp" />
+    <!-- Select End Date Button -->
+    <Button
+        android:id="@+id/buttonEndDate"
+        android:layout_width="0dp"
+        android:layout_height="94dp"
+        android:backgroundTint="#4CAF50"
+        android:text="Select End Date"
+        android:textColor="@android:color/white"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonStartDate"
+        android:layout_marginTop="16dp" />
 
-<ListView
-android:layout_width="match_parent"
-android:layout_height="415dp" />
+    <!-- ListView for displaying expenses -->
+    <ListView
+        android:id="@+id/listViewExpenseHistory"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonEndDate"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        android:layout_marginTop="16dp" />
 
     <!-- Bottom Navigation View -->
-<com.google.android.material.bottomnavigation.BottomNavigationView
-android:id="@+id/bottomNavigationView"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:background="@android:color/white"
-app:itemIconTint="@android:color/black"
-app:itemTextColor="@android:color/black"
-app:menu="@menu/bottom_nav_menu" />
-    </LinearLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@android:color/white"
+        app:itemIconTint="@android:color/black"
+        app:itemTextColor="@android:color/black"
+        app:menu="@menu/bottom_nav_menu" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
