--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,13 +12,15 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="428dp"
-        android:layout_height="395dp"
+        android:layout_height="326dp"
         app:srcCompat="@drawable/imglogo" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="#003366"
         android:gravity="center"
         android:text="Login"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
