--- a/app/src/main/res/layout/activity_reports.xml
+++ b/app/src/main/res/layout/activity_reports.xml
@@ -1,53 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- activity_reports.xml -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    tools:context=".ReportsActivity"
     android:padding="16dp">
 
-    <!-- Date Picker Button -->
-<TextView
-android:id="@+id/textView3"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:gravity="center"
-android:text="Reports"
-android:textSize="46sp" />
+    <!-- Reports Title -->
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:text="Reports"
+        android:textColor="#003366"
+        android:textSize="42sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-<Button
-android:id="@+id/btnAddCat"
-android:layout_width="match_parent"
-android:layout_height="94dp"
-android:backgroundTint="#4CAF50"
-android:text="Select Date Range"
-android:textColor="@android:color/white"
-android:textSize="34sp" />
+    <!-- Select Date Range Button -->
+    <Button
+        android:id="@+id/btnAddCat"
+        android:layout_width="0dp"
+        android:layout_height="94dp"
+        android:backgroundTint="#4CAF50"
+        android:text="Select Date Range"
+        android:textColor="@android:color/white"
+        android:textSize="34sp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Placeholder for chart -->
-<ImageView
-android:id="@+id/imageViewChart"
-android:layout_width="match_parent"
-android:layout_height="200dp"
-android:layout_marginTop="16dp"
-android:background="#E0E0E0"
-android:contentDescription="Chart Placeholder" />
+    <!-- Chart Placeholder -->
+    <ImageView
+        android:id="@+id/imageViewChart"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
+        android:background="#E0E0E0"
+        android:contentDescription="Chart Placeholder"
+        app:layout_constraintTop_toBottomOf="@+id/btnAddCat"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- ListView for category summary -->
-<ListView
-android:id="@+id/listViewCategorySummary"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_marginTop="16dp" />
+    <!-- Category Summary ListView -->
+    <ListView
+        android:id="@+id/listViewCategorySummary"
+        android:layout_width="0dp"
+        android:layout_height="226dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewChart"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Bottom Navigation View -->
-<com.google.android.material.bottomnavigation.BottomNavigationView
-android:id="@+id/bottomNavigationView"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:background="@android:color/white"
-app:itemIconTint="@android:color/black"
-app:itemTextColor="@android:color/black"
-app:menu="@menu/bottom_nav_menu" /> <!-- Reference your menu here -->
-    </LinearLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@android:color/white"
+        app:itemIconTint="@android:color/black"
+        app:itemTextColor="@android:color/black"
+        app:menu="@menu/bottom_nav_menu" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
