--- a/app/src/main/res/layout/activity_reports.xml
+++ b/app/src/main/res/layout/activity_reports.xml
@@ -18,20 +18,53 @@
         android:textColor="#003366"
         android:textSize="42sp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Select Date Range Button -->
-    <Button
-        android:id="@+id/btnAddCat"
+    <!-- Row of Start and End Date Buttons -->
+    <LinearLayout
+        android:id="@+id/dateButtonLayout"
         android:layout_width="0dp"
-        android:layout_height="94dp"
-        android:backgroundTint="#4CAF50"
-        android:text="Select Date Range"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/textView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/btnPickStartDate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#4CAF50"
+            android:text="Pick Start Date"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/btnPickEndDate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#4CAF50"
+            android:text="Pick End Date"
+            android:textColor="@android:color/white"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <!-- Search Button -->
+    <Button
+        android:id="@+id/btnSearch"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#2196F3"
+        android:text="Search"
         android:textColor="@android:color/white"
-        android:textSize="34sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:textSize="22sp"
+        app:layout_constraintTop_toBottomOf="@id/dateButtonLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -43,7 +76,7 @@
         android:layout_marginTop="16dp"
         android:background="#E0E0E0"
         android:contentDescription="Chart Placeholder"
-        app:layout_constraintTop_toBottomOf="@+id/btnAddCat"
+        app:layout_constraintTop_toBottomOf="@id/btnSearch"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -53,7 +86,7 @@
         android:layout_width="0dp"
         android:layout_height="226dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewChart"
+        app:layout_constraintTop_toBottomOf="@id/imageViewChart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
