--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-files-path
-        name="images"
-        path="Pictures/" />
+    <!-- Allow FileProvider to access the "Pictures" directory under External Storage -->
+    <external-path
+        name="external_files"
+        path="." />
 </paths>
