--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -7,7 +7,6 @@
     android:padding="16dp"
     tools:context=".CategoryActivity">
 
-    <!-- Header text -->
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
@@ -22,13 +21,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="20dp" />
 
-    <!-- ListView for displaying categories -->
-
-    <!-- EditText for entering category name -->
     <ListView
         android:id="@+id/ctgList"
-        android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_width="367dp"
+        android:layout_height="380dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -39,7 +35,7 @@
         android:id="@+id/ctgName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
         android:hint="Enter category name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,13 +43,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ctgList" />
 
-    <!-- Button to add a category -->
     <Button
         android:id="@+id/btnAddCat"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="#4CAF50"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#023B68"
         android:text="Add Category"
         android:textColor="@android:color/white"
         android:textSize="20sp"
@@ -62,7 +57,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ctgName" />
 
-    <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
