--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,10 +8,9 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="428dp"
+        android:layout_width="match_parent"
         android:layout_height="326dp"
         app:srcCompat="@drawable/imglogo" />
 
@@ -36,7 +35,8 @@
         android:hint="Email Address"
         android:inputType="textEmailAddress"
         android:padding="16dp"
-        android:minHeight="48dp" />
+        android:minHeight="48dp"
+        android:layout_weight="1" />
 
     <EditText
         android:id="@+id/editTextPassword"
@@ -47,12 +47,14 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
-        android:padding="16dp" />
+        android:padding="16dp"
+        android:layout_weight="1" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="94dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="#2196F3"
         android:text="Log In"
         android:textColor="@android:color/white"
@@ -62,10 +64,10 @@
         android:id="@+id/button3"
         android:layout_width="match_parent"
         android:layout_height="94dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="#023B68"
         android:text="Register"
         android:textColor="@android:color/white"
         android:textSize="34sp" />
-
 
 </LinearLayout>
