--- a/app/src/main/res/layout/activity_reports.xml
+++ b/app/src/main/res/layout/activity_reports.xml
@@ -7,7 +7,6 @@
     tools:context=".ReportsActivity"
     android:padding="16dp">
 
-    <!-- Reports Title -->
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
@@ -21,7 +20,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Row of Start and End Date Buttons -->
     <LinearLayout
         android:id="@+id/dateButtonLayout"
         android:layout_width="0dp"
@@ -38,7 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="#4CAF50"
+            android:backgroundTint="#023B68"
             android:text="Pick Start Date"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
@@ -48,13 +46,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="#4CAF50"
+            android:backgroundTint="#023B68"
             android:text="Pick End Date"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
     </LinearLayout>
 
-    <!-- Search Button -->
     <Button
         android:id="@+id/btnSearch"
         android:layout_width="0dp"
@@ -68,7 +65,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Chart Placeholder -->
     <ImageView
         android:id="@+id/imageViewChart"
         android:layout_width="0dp"
@@ -80,7 +76,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Category Summary ListView -->
     <ListView
         android:id="@+id/listViewCategorySummary"
         android:layout_width="0dp"
@@ -90,7 +85,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Bottom Navigation View -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
